--- a/main.html
+++ b/main.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>My Portfolio</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<!-- Portfolio Page -->
 
+	<!-- Profile Image -->
+	<img src=""C:\Users\ADMIN\Downloads\photo.jpg"" alt="My Photo" width="200" height="200">
+
+	<!-- Name -->
+	<h1>Your Name</h1>
+
+	<!-- LinkedIn Profile -->
+	<p>
+		<a href="https://www.linkedin.com/in/soham-shinde-188482259/" target="_blank">LinkedIn</a>
+	</p>
+
+	<!-- Skills Section -->
+	<section id="skills">
+		<h2>My Skills</h2>
+		<p>HTML, CSS, JavaScript, React, Node.js, MongoDB</p>
+	</section>
+
+	<!-- Projects Section -->
+	<section id="projects">
+		<h2>My Projects</h2>
+		<ul>
+			<li>Portfolio Website</li>
+			<li>Weather App</li>
+			<li>Todo List Application</li>
+			<li>Sports Injury And Rehab</li>
+		</ul>
+	</section>
+
+	<script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
